--- a/FestiMania_front/angular.json
+++ b/FestiMania_front/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/segur-hogar",
+            "outputPath": "dist/festi-mania",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
